# ARC-AGI-3-Agents

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  agent.py  swarm.py
agents/templates/: catcsetarc_bridge_agent.py  langgraph_functional_agent.py  langgraph_random_agent.py  llm_agents.py  multimodal.py  random_agent.py  reasoning_agent.py  smolagents.py
agents/templates/active_inference/: __init__.py  agent.py  contracts.py  diagnostics.py  efe.py  hypothesis_bank.py  policy.py  representation.py  trace.py
agents/templates/langgraph_thinking/: agent.py  nodes.py  schema.py  tools.py
docs/active_inference/: ls20_improvement_version_record.md
tests/unit/: test_active_inference_framework.py  test_main.py
